--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.7
 pytz-deprecation-shim==0.1.0.post0
-# PyYAML==6.0
+PyYAML==6.0
 qrcode==7.4.2
 # reportlab==3.6.12
 requests==2.28.2
@@ -91,3 +91,4 @@ vine==5.0.0
 wcwidth==0.2.5
 webencodings==0.5.1
 xhtml2pdf==0.2.9
+setuptools==69.0.3
